Restore lost config tests, refactor LanguagesValidator(Test)